deploy/lab/registry/base/deployment.yml
---
# Create a single-node ElasticSearch "cluster" to serve as a sink for fluentd.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: registry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/docker/registry
              name: config-volume
          #            - mountPath: /var/lib/registry
          #              name: registry-data-volume
      volumes:
        #        - name: registry-data-volume
        #          persistentVolumeClaim:
        #            claimName: registry-data-pvc
        - name: config-volume
          configMap:
            name: registry-config
