deploy/lab/registry/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
spec:
  rules:
    - host: registry.lab
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: registry
                port:
                  number: 5000
